# rockies

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build.rs  package-lock.json  wasm-build.sh
.cargo/: config.toml
src/: assets.rs  color.rs  console.rs  generator.rs  grid.rs  inertia.rs  int_pair_set.rs  lib.rs  log.rs  main.rs  multigrid.rs  smallint_set.rs  universe.rs  v2.rs
tla/: GridSystem.cfg  GridSystem.tla  grid_system.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
