[package]
name = "rockies"
description = "A 2d pixel-based sandbox game"
license = "GPL-2.0-only"
version = "0.1.0"
authors = ["Noam Lewis <noam@example.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rockies"
path = "src/main.rs"
required-features = ["terminal"]

[features]
default = ["terminal"]
wasm = ["console_error_panic_hook"]
terminal = ["ansi-control-codes", "libc", "sdl2"]
wasm_js = ["console_error_panic_hook"]

[dependencies]
noise = "0.9"
fnv = "1.0.3"
rand = { version = "0.9", default-features = false }
wasm-bindgen = { version = "0.2.100" }
serde-wasm-bindgen = "0.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

ansi_term = { version = "0.12.1" }
ansi-control-codes = { version = "1.0.1", optional = true }
libc = { version = "0.2.155", optional = true }
sdl2 = { version = "0.37.0", optional = true }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[build-dependencies]
image = "0.25.1"
itertools = "0.14.0"

[profile.release]
debug = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-Os']

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = false
